# split-rectangle-cpp

./: CMakeLists.txt  README.md  fuzzy_test.cc  rect.h  split_rect.h  test_rect.cc  test_split.cc  utils.h
include/: rect.h  split_rect.h
tests/: CMakeLists.txt  benchmark.cc  fuzzy_test.cc  test_rect.cc  test_split.cc  utils.h
